--- a/EAA.ipynb
+++ b/EAA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "d0486a25",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "63978b03",
    "metadata": {},
    "outputs": [
@@ -79,18 +79,17 @@
     }
    ],
    "source": [
+    "# adding columns for later\n",
     "data['O3roll'] = data['O3'].rolling(8).mean()\n",
     "data['COroll'] = data['CO'].rolling(8).mean()\n",
-    "\n",
-    "#ελεγχος 6ωρου στα κυλιομενα 8ωρα else α σβηνει τις τιμες\n",
-    "\n",
     "data['date'] = data['DATETIME'].dt.date\n",
-    "print(data)"
+    "\n",
+    "#ελεγχος 6ωρου στα κυλιομενα 8ωρα else vα σβηνει τις τιμες"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "c76b17fa",
    "metadata": {},
    "outputs": [
@@ -335,7 +334,7 @@
        "[75 rows x 10 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "b61c395b",
    "metadata": {},
    "outputs": [
@@ -385,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "e371312d",
    "metadata": {},
    "outputs": [
@@ -420,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "5153df4a",
    "metadata": {},
    "outputs": [
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "64b2f800",
    "metadata": {},
    "outputs": [
@@ -470,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "8b493e92",
    "metadata": {},
    "outputs": [
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "d9e1d51d",
    "metadata": {},
    "outputs": [
@@ -528,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "b8e2b201",
    "metadata": {},
    "outputs": [
@@ -554,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "bdb23736",
    "metadata": {},
    "outputs": [
@@ -582,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "69acd4b6",
    "metadata": {},
    "outputs": [
@@ -616,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "id": "f0e42069",
    "metadata": {},
    "outputs": [
@@ -636,7 +635,7 @@
     "\n",
     "print(\"Οι έγκυρες τιμές είναι\", len(grouped_single['PM10']) - grouped_single['PM10']['count'].le(18).sum())\n",
     "\n",
-    "if pm3 > (0.9*grouped_single.shape[0]):\n",
+    "if grouped_single['PM10']['mean'].count() > (0.9*grouped_single.shape[0]):\n",
     "    print(\"Ικανοποιείται ο έλεγχος πληρότητας\")\n",
     "else:\n",
     "    print(\"Δεν ικανοποιείται ο έλεγχος πληρότητας\")"
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "id": "08dc8cb9",
    "metadata": {},
    "outputs": [
@@ -670,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "id": "48a67c84",
    "metadata": {},
    "outputs": [
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "id": "8e85e0d5",
    "metadata": {},
    "outputs": [
@@ -733,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "id": "b3d0b13e",
    "metadata": {},
    "outputs": [
@@ -767,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "fa172f66",
    "metadata": {
     "scrolled": true
@@ -799,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "id": "aa94cc51",
    "metadata": {},
    "outputs": [
@@ -818,7 +817,7 @@
     "\n",
     "print(\"Η οριακή τιμή του έτους είναι\", round(grouped_single['O3roll']['max'].max(), 1), \"μg/m3\")\n",
     "\n",
-    "if grouped_single['O3roll']['max'].max() > 120: #25 \n",
+    "if grouped_single['O3roll']['max'].max() > 120 and grouped_single['O3roll']['count'].gt(18): #25 \n",
     "    print(\"Παρατηρείται παραβίαση του ορίου\")\n",
     "else:\n",
     "    print(\"Δεν παρατηρείται υπέρβαση του ορίου\")\n",
@@ -844,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "id": "1be348bd",
    "metadata": {},
    "outputs": [
@@ -874,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "id": "af261e50",
    "metadata": {},
    "outputs": [
@@ -893,7 +892,7 @@
     "\n",
     "print(\"Η οριακή τιμή του έτους είναι\", round(grouped_single['COroll']['max'].max(), 2), \"mg/m3\")\n",
     "\n",
-    "if grouped_single['COroll']['max'].max() > 10: #gia oses einai >18\n",
+    "if grouped_single['COroll']['max'].max() > 10 and grouped_single['COroll']['count'].gt(18):\n",
     "    print(\"Παρατηρείται παραβίαση του ορίου\")\n",
     "else:\n",
     "    print(\"Δεν παρατηρείται υπέρβαση του ορίου\")\n",
