--- a/EAA.ipynb
+++ b/EAA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 163,
    "id": "d0486a25",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 176,
    "id": "63978b03",
    "metadata": {},
    "outputs": [
@@ -48,50 +48,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                DATETIME   C6H6   NO2  SO2   PM10  PM2.5    O3   CO  O3roll  \\\n",
-      "0    2020-01-01 00:00:00   9.98  57.0  8.0  133.0  112.0   8.0  NaN     NaN   \n",
-      "1    2020-01-01 01:00:00  11.15  56.0  8.0  142.0  120.0  10.0  NaN     NaN   \n",
-      "2    2020-01-01 02:00:00  11.71  53.0  9.0  197.0  175.0   6.0  NaN     NaN   \n",
-      "3    2020-01-01 03:00:00   9.26  46.0  7.0  146.0  123.0   6.0  NaN     NaN   \n",
-      "4    2020-01-01 04:00:00   9.68  45.0  8.0  133.0  117.0   5.0  NaN     NaN   \n",
-      "...                  ...    ...   ...  ...    ...    ...   ...  ...     ...   \n",
-      "8779 2020-12-31 19:00:00   0.77  32.0  4.0   44.0   12.0  40.0  1.6  45.250   \n",
-      "8780 2020-12-31 20:00:00   1.15  52.0  5.0   46.0   16.0  26.0  2.2  43.750   \n",
-      "8781 2020-12-31 21:00:00   0.61  36.0  5.0   47.0   21.0  43.0  2.4  43.250   \n",
-      "8782 2020-12-31 22:00:00   0.40  52.0  4.0   25.0    6.0  28.0  1.6  40.875   \n",
-      "8783 2020-12-31 23:00:00   0.48  41.0  6.0   27.0    8.0  38.0  0.9  39.750   \n",
+      "                DATETIME   C6H6   NO2  SO2   PM10  PM2.5    O3   CO  \\\n",
+      "0    2020-01-01 00:00:00   9.98  57.0  8.0  133.0  112.0   8.0  NaN   \n",
+      "1    2020-01-01 01:00:00  11.15  56.0  8.0  142.0  120.0  10.0  NaN   \n",
+      "2    2020-01-01 02:00:00  11.71  53.0  9.0  197.0  175.0   6.0  NaN   \n",
+      "3    2020-01-01 03:00:00   9.26  46.0  7.0  146.0  123.0   6.0  NaN   \n",
+      "4    2020-01-01 04:00:00   9.68  45.0  8.0  133.0  117.0   5.0  NaN   \n",
+      "...                  ...    ...   ...  ...    ...    ...   ...  ...   \n",
+      "8779 2020-12-31 19:00:00   0.77  32.0  4.0   44.0   12.0  40.0  1.6   \n",
+      "8780 2020-12-31 20:00:00   1.15  52.0  5.0   46.0   16.0  26.0  2.2   \n",
+      "8781 2020-12-31 21:00:00   0.61  36.0  5.0   47.0   21.0  43.0  2.4   \n",
+      "8782 2020-12-31 22:00:00   0.40  52.0  4.0   25.0    6.0  28.0  1.6   \n",
+      "8783 2020-12-31 23:00:00   0.48  41.0  6.0   27.0    8.0  38.0  0.9   \n",
       "\n",
-      "      COroll        date  \n",
-      "0        NaN  2020-01-01  \n",
-      "1        NaN  2020-01-01  \n",
-      "2        NaN  2020-01-01  \n",
-      "3        NaN  2020-01-01  \n",
-      "4        NaN  2020-01-01  \n",
-      "...      ...         ...  \n",
-      "8779  1.0750  2020-12-31  \n",
-      "8780  1.1625  2020-12-31  \n",
-      "8781  1.2750  2020-12-31  \n",
-      "8782  1.3750  2020-12-31  \n",
-      "8783  1.3625  2020-12-31  \n",
+      "            date  O3rcount  COrcount  O3roll  COroll  \n",
+      "0     2020-01-01       NaN       NaN     NaN     NaN  \n",
+      "1     2020-01-01       NaN       NaN     NaN     NaN  \n",
+      "2     2020-01-01       NaN       NaN     NaN     NaN  \n",
+      "3     2020-01-01       NaN       NaN     NaN     NaN  \n",
+      "4     2020-01-01       NaN       NaN     NaN     NaN  \n",
+      "...          ...       ...       ...     ...     ...  \n",
+      "8779  2020-12-31       8.0       8.0  45.250  1.0750  \n",
+      "8780  2020-12-31       8.0       8.0  43.750  1.1625  \n",
+      "8781  2020-12-31       8.0       8.0  43.250  1.2750  \n",
+      "8782  2020-12-31       8.0       8.0  40.875  1.3750  \n",
+      "8783  2020-12-31       8.0       8.0  39.750  1.3625  \n",
       "\n",
-      "[8784 rows x 11 columns]\n"
+      "[8784 rows x 13 columns]\n"
      ]
     }
    ],
    "source": [
     "# adding columns for later\n",
+    "\n",
+    "\n",
+    "data['date'] = data['DATETIME'].dt.date\n",
+    "data['O3rcount'] = data['O3'].rolling(8, min_periods=8).count()\n",
+    "data['COrcount'] = data['CO'].rolling(8, min_periods=8).count()\n",
+    "\n",
+    "for i in data['O3rcount'].dropna():\n",
+    "    if data['O3rcount'][i] < 8:\n",
+    "        data['O3roll'][i] = ''\n",
+    "\n",
+    "#for i in data['COrcount'].dropna():\n",
+    " #   if data['COrcount'][i] < 8:\n",
+    "  #      data['CO'][i] = ''        \n",
+    "        \n",
     "data['O3roll'] = data['O3'].rolling(8).mean()\n",
     "data['COroll'] = data['CO'].rolling(8).mean()\n",
-    "data['date'] = data['DATETIME'].dt.date\n",
     "\n",
-    "#ελεγχος 6ωρου στα κυλιομενα 8ωρα else vα σβηνει τις τιμες"
+    "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 174,
    "id": "c76b17fa",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -218,86 +233,72 @@
        "      <td>0.4625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-11</th>\n",
+       "      <th>2020-01-06</th>\n",
        "      <td>24</td>\n",
-       "      <td>10.333333</td>\n",
-       "      <td>24</td>\n",
-       "      <td>50.583333</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25.541667</td>\n",
-       "      <td>24</td>\n",
-       "      <td>8.750</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3.5375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-12</th>\n",
+       "      <td>10.208333</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20.900000</td>\n",
        "      <td>24</td>\n",
        "      <td>9.083333</td>\n",
        "      <td>24</td>\n",
-       "      <td>28.375000</td>\n",
+       "      <td>50.125</td>\n",
        "      <td>24</td>\n",
-       "      <td>15.791667</td>\n",
-       "      <td>24</td>\n",
-       "      <td>28.000</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.6750</td>\n",
+       "      <td>1.3875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-03-13</th>\n",
+       "      <th>2020-01-07</th>\n",
        "      <td>24</td>\n",
-       "      <td>6.583333</td>\n",
+       "      <td>18.000000</td>\n",
        "      <td>24</td>\n",
-       "      <td>18.208333</td>\n",
-       "      <td>22</td>\n",
-       "      <td>8.272727</td>\n",
+       "      <td>46.625000</td>\n",
        "      <td>24</td>\n",
-       "      <td>46.625</td>\n",
+       "      <td>25.333333</td>\n",
        "      <td>24</td>\n",
-       "      <td>2.6375</td>\n",
+       "      <td>43.125</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.2375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-03-14</th>\n",
+       "      <th>2020-01-08</th>\n",
        "      <td>24</td>\n",
-       "      <td>10.833333</td>\n",
+       "      <td>13.625000</td>\n",
        "      <td>24</td>\n",
-       "      <td>33.541667</td>\n",
+       "      <td>48.458333</td>\n",
        "      <td>24</td>\n",
-       "      <td>18.833333</td>\n",
+       "      <td>24.375000</td>\n",
        "      <td>24</td>\n",
-       "      <td>55.500</td>\n",
+       "      <td>84.750</td>\n",
        "      <td>24</td>\n",
-       "      <td>3.1500</td>\n",
+       "      <td>1.5125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-03-15</th>\n",
+       "      <th>2020-01-09</th>\n",
+       "      <td>24</td>\n",
+       "      <td>17.041667</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>24</td>\n",
-       "      <td>34.458333</td>\n",
-       "      <td>24</td>\n",
        "      <td>20.083333</td>\n",
        "      <td>24</td>\n",
-       "      <td>55.875</td>\n",
+       "      <td>94.000</td>\n",
        "      <td>24</td>\n",
-       "      <td>1.0000</td>\n",
+       "      <td>2.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-10</th>\n",
+       "      <td>24</td>\n",
+       "      <td>13.333333</td>\n",
+       "      <td>24</td>\n",
+       "      <td>18.208333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>66.250</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.8125</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>75 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -309,12 +310,11 @@
        "2020-01-03    24  13.708333    24  28.583333    11  23.545455     24  74.875   \n",
        "2020-01-04    24   5.166667    24  43.333333    24  20.500000     24  84.500   \n",
        "2020-01-05    24   6.708333    24  17.500000    24   8.250000     24  81.375   \n",
-       "...          ...        ...   ...        ...   ...        ...    ...     ...   \n",
-       "2020-03-11    24  10.333333    24  50.583333    24  25.541667     24   8.750   \n",
-       "2020-03-12    24   9.083333    24  28.375000    24  15.791667     24  28.000   \n",
-       "2020-03-13    24   6.583333    24  18.208333    22   8.272727     24  46.625   \n",
-       "2020-03-14    24  10.833333    24  33.541667    24  18.833333     24  55.500   \n",
-       "2020-03-15     0        NaN    24  34.458333    24  20.083333     24  55.875   \n",
+       "2020-01-06    24  10.208333    10  20.900000    24   9.083333     24  50.125   \n",
+       "2020-01-07    24  18.000000    24  46.625000    24  25.333333     24  43.125   \n",
+       "2020-01-08    24  13.625000    24  48.458333    24  24.375000     24  84.750   \n",
+       "2020-01-09    24  17.041667     0        NaN    24  20.083333     24  94.000   \n",
+       "2020-01-10    24  13.333333    24  18.208333     0        NaN     24  66.250   \n",
        "\n",
        "           COroll          \n",
        "            count     max  \n",
@@ -324,25 +324,24 @@
        "2020-01-03     24  1.3500  \n",
        "2020-01-04     24  0.4000  \n",
        "2020-01-05     24  0.4625  \n",
-       "...           ...     ...  \n",
-       "2020-03-11     24  3.5375  \n",
-       "2020-03-12     24  0.6750  \n",
-       "2020-03-13     24  2.6375  \n",
-       "2020-03-14     24  3.1500  \n",
-       "2020-03-15     24  1.0000  \n",
-       "\n",
-       "[75 rows x 10 columns]"
+       "2020-01-06     24  1.3875  \n",
+       "2020-01-07     24  1.2375  \n",
+       "2020-01-08     24  1.5125  \n",
+       "2020-01-09     24  2.2500  \n",
+       "2020-01-10     24  1.8125  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#second dataframe for calculations\n",
+    "\n",
     "grouped_single = data.groupby('date').agg({'SO2': ['count','mean'], 'PM10': ['count','mean'], 'PM2.5': ['count','mean'], 'O3roll': ['count','max'] , 'COroll': ['count','max']})\n",
     "grouped_single.replace('', np.nan).count()\n",
-    "grouped_single.head(75)"
+    "grouped_single.head(10)"
    ]
   },
   {
@@ -355,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
    "id": "b61c395b",
    "metadata": {},
    "outputs": [
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "id": "e371312d",
    "metadata": {},
    "outputs": [
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "id": "5153df4a",
    "metadata": {},
    "outputs": [
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "id": "64b2f800",
    "metadata": {},
    "outputs": [
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "id": "8b493e92",
    "metadata": {},
    "outputs": [
@@ -500,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 100,
    "id": "d9e1d51d",
    "metadata": {},
    "outputs": [
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "id": "b8e2b201",
    "metadata": {},
    "outputs": [
@@ -553,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 102,
    "id": "bdb23736",
    "metadata": {},
    "outputs": [
@@ -581,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 103,
    "id": "69acd4b6",
    "metadata": {},
    "outputs": [
@@ -615,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "id": "f0e42069",
    "metadata": {},
    "outputs": [
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "id": "08dc8cb9",
    "metadata": {},
    "outputs": [
@@ -669,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "id": "48a67c84",
    "metadata": {},
    "outputs": [
@@ -703,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "id": "8e85e0d5",
    "metadata": {},
    "outputs": [
@@ -732,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "id": "b3d0b13e",
    "metadata": {},
    "outputs": [
@@ -766,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 175,
    "id": "fa172f66",
    "metadata": {
     "scrolled": true
@@ -798,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 168,
    "id": "aa94cc51",
    "metadata": {},
    "outputs": [
@@ -826,6 +825,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "760f85a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yπερβάσεις του ορίου συναργερμού που παρατηρήθηκαν: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Όριο συναγερμού: 240 μg/m3 για 3 συνεχόμενες ώρες\n",
+    "\n",
+    "times = 0\n",
+    "size = len(data['O3'])\n",
+    "  \n",
+    "for i in range(size - 2):\n",
+    "  \n",
+    "    if data['O3'][i] > 240 and data['O3'][i + 1] > 240  and data['O3'][i + 2] > 240:\n",
+    "        times += 1\n",
+    "        \n",
+    "print(\"Yπερβάσεις του ορίου συναργερμού που παρατηρήθηκαν:\", times)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1f23ae6",
    "metadata": {},
@@ -843,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 112,
    "id": "1be348bd",
    "metadata": {},
    "outputs": [
@@ -873,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 113,
    "id": "af261e50",
    "metadata": {},
    "outputs": [
@@ -901,17 +928,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bc806f50",
-   "metadata": {},
-   "source": [
-    "χρειάζεται διόρθωση στον έλεγχο πληρότητας για το όζον και το μονοξείδιο του άνθρακα"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a61b69fa",
+   "id": "401cbae7",
    "metadata": {},
    "outputs": [],
    "source": []
